[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "System URI API library"
documentation = "https://docs.rs/system_uri"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "system_uri"
readme = "README.md"
repository = "https://github.com/maidsafe/system_uri"
version = "0.0.1"

[dependencies]
error-chain = "0.7.1"
ffi_utils = { git = "https://github.com/maidsafe/safe_client_libs.git", branch = "dev", optional = true }
libc  = { version= "0.2", optional = true }

[dev-dependencies]
rand = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.4"
winapi = "0.2.8"

[target.'cfg(target_os = "linux")'.dependencies]
xdg-basedir = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
name = "system_uri"

[features]
default = ["ffi"]
ffi = ["libc", "ffi_utils"]
